fix non-retina popover blurriness

--- a/src/styles/components/specific/popover-feature.scss
+++ b/src/styles/components/specific/popover-feature.scss
@@ -1,7 +1,7 @@
 .popover-feature {
-  right: -((315px / 2) - 20); // width / 2 - arrow
+  right: -((316px / 2) - 20); // width / 2 - arrow
   top: 0;
-  width: 315px;
+  width: 316px;
 
   &.popover-hover-wrapper {
     transform: none;
